latest jsons, update github link

--- a/contact_us.html
+++ b/contact_us.html
@@ -246,7 +246,7 @@
                         </div>
                         <h4>GitHub</h4>
                         <p>Contribute to our open-source directory:</p>
-                        <p><a href="https://github.com/bitcoin-businesses/directory" target="_blank">github.com/aoeu10/BTCAccepted</a></p>
+                        <p><a href="https://github.com/aoeu10/BTCAccepted" target="_blank">github.com/aoeu10/BTCAccepted</a></p>
                     </div>
                 </div>
 
