Refactor business and location editors: add new styles, enhance UI components, and consolidate functionality into a single combined editor file.

--- a/businessEditor2.html
+++ b/businessEditor2.html
@@ -28,6 +28,35 @@
             margin: 0;
             vertical-align: middle;
         }
+        .nav-tabs {
+            margin-top: 20px;
+            border-bottom: 2px solid #dee2e6;
+        }
+        .nav-tabs .nav-link {
+            color: #495057;
+            border: none;
+            padding: 10px 20px;
+            margin-right: 10px;
+            border-radius: 4px 4px 0 0;
+        }
+        .nav-tabs .nav-link:hover {
+            border: none;
+            color: #f7931a;
+        }
+        .nav-tabs .nav-link.active {
+            color: #f7931a;
+            background-color: white;
+            border: none;
+            border-bottom: 2px solid #f7931a;
+            margin-bottom: -2px;
+        }
+        .tab-content {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            padding: 20px;
+            margin-top: -1px;
+        }
         .content-section {
             background-color: white;
             border-radius: 8px;
