--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bitcoin-Accepting Businesses Directory</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,6 +17,16 @@
             color: white;
             padding: 20px 0;
             margin-bottom: 30px;
+        }
+        .header h1 {
+            display: inline-block;
+            margin: 0;
+            vertical-align: middle;
+            font-family: 'Roboto Condensed', sans-serif;
+            font-weight: 700;
+        }
+        .header p {
+            font-family: 'Roboto Condensed', sans-serif;
         }
         .business-card {
             cursor: pointer;
@@ -46,11 +57,6 @@
         .bitcoin-icon {
             height: 48px;
             margin-right: 10px;
-            vertical-align: middle;
-        }
-        .header h1 {
-            display: inline-block;
-            margin: 0;
             vertical-align: middle;
         }
         #businessDetail {
