Update index.html: change header text to 'BTCAccepted' and enhance description for Bitcoin payment support

--- a/index.html
+++ b/index.html
@@ -486,10 +486,10 @@
             <div class="d-flex align-items-center">
                 <a href="index.html" class="text-white text-decoration-none">
                     <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
-                    <h1>Accepted</h1>
+                    <h1>BTCAccepted</h1>
                 </a>
             </div>
-            <p class="mb-0">Find businesses that accept Bitcoin payments</p>
+            <p class="mb-0">Help support the Bitcoin circular economy. Find businesses that accept Bitcoin payments.</p>
         </div>
     </div>
 
