--- a/changelog.html
+++ b/changelog.html
@@ -6,6 +6,7 @@
     <title>Changelog & Attribution - Bitcoin-Accepting Businesses Directory</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -26,6 +27,11 @@
             display: inline-block;
             margin: 0;
             vertical-align: middle;
+            font-family: 'Roboto Condensed', sans-serif;
+            font-weight: 700;
+        }
+        .header p {
+            font-family: 'Roboto Condensed', sans-serif;
         }
         .content-section {
             background-color: white;
@@ -85,10 +91,10 @@
             <div class="d-flex align-items-center">
                 <a href="index.html" class="text-white text-decoration-none">
                     <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
-                    <h1>Accepted</h1>
+                    <h1>BTCAccepted</h1>
                 </a>
             </div>
-            <p class="mb-0">Find businesses that accept Bitcoin payments</p>
+            <p class="mb-0">Help support the Bitcoin circular economy. Find businesses that accept Bitcoin payments.</p>
         </div>
     </div>
 
