--- a/businessEditor.html
+++ b/businessEditor.html
@@ -20,7 +20,7 @@
             margin-bottom: 30px;
         }
         .bitcoin-icon {
-            height: 48px;
+            height: 80px;
             margin-right: 10px;
             vertical-align: middle;
         }
@@ -268,13 +268,17 @@
     <!-- Header -->
     <div class="header">
         <div class="container">
-            <div class="d-flex align-items-center">
-                <a href="index.html" class="text-white text-decoration-none">
+            <div class="d-flex">
+                <div class="d-flex align-items-center">
                     <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
-                    <h1>BTCAccepted</h1>
-                </a>
+                </div>
+                <div>
+                    <a href="index.html" class="text-white text-decoration-none">
+                        <h1>BTCAccepted</h1>
+                    </a>
+                    <p class="mb-0">Import, edit, and export your Bitcoin-accepting businesses directory</p>
+                </div>
             </div>
-            <p class="mb-0">Import, edit, and export your Bitcoin-accepting businesses directory</p>
         </div>
     </div>
 
