--- a/links.html
+++ b/links.html
@@ -19,7 +19,7 @@
             margin-bottom: 30px;
         }
         .bitcoin-icon {
-            height: 48px;
+            height: 80px;
             margin-right: 10px;
             vertical-align: middle;
         }
@@ -63,13 +63,17 @@
 <body>
     <div class="header">
         <div class="container">
-            <div class="d-flex align-items-center">
-                <a href="index.html" class="text-white text-decoration-none">
+            <div class="d-flex">
+                <div class="d-flex align-items-center">
                     <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
-                    <h1>BTCAccepted</h1>
-                </a>
+                </div>
+                <div>
+                    <a href="index.html" class="text-white text-decoration-none">
+                        <h1>BTCAccepted</h1>
+                    </a>
+                    <p class="mb-0">Help support the Bitcoin circular economy. Find businesses that accept Bitcoin payments.</p>
+                </div>
             </div>
-            <p class="mb-0">Help support the Bitcoin circular economy. Find businesses that accept Bitcoin payments.</p>
         </div>
     </div>
 
