Update multiple HTML files to include Bitcoin logo links, enhance category structures, and add new logo files. Introduce a new analyzer.html for investment performance analysis and update .gitignore to exclude .DS_Store files.

--- a/locationEditor.html
+++ b/locationEditor.html
@@ -102,10 +102,12 @@
         <div class="container">
             <div class="d-flex">
                 <div class="d-flex align-items-center">
-                    <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
+                    <a href="locationEditor.html">
+                        <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
+                    </a>
                 </div>
                 <div>
-                    <a href="index.html" class="text-white text-decoration-none">
+                    <a href="locationEditor.html" class="text-white text-decoration-none">
                         <h1>BTCAccepted</h1>
                     </a>
                     <p class="mb-0">Location Data Management</p>
