--- a/links.html
+++ b/links.html
@@ -65,7 +65,9 @@
         <div class="container">
             <div class="d-flex">
                 <div class="d-flex align-items-center">
-                    <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
+                    <a href="index.html">
+                        <img src="images/icons/btcLogo.svg" alt="Bitcoin Logo" class="bitcoin-icon">
+                    </a>
                 </div>
                 <div>
                     <a href="index.html" class="text-white text-decoration-none">
