Update changelog and HTML files to include new map features, BTCMap integration, and responsive design improvements. Add Leaflet library for enhanced map functionality

--- a/changelog.html
+++ b/changelog.html
@@ -121,12 +121,73 @@
                 </div>
                 <ul class="changelog-list text-muted">
                     <li class="feature-item">Enhanced search with advanced filtering options</li>
-                    <li class="feature-item">Interactive map view for geographic browsing</li>
-                    <li class="feature-item">Ability to search BTCMap listings integrated into the directory</li>
                     <li class="feature-item">Implementation of ratings and reviews for businesses</li>
                     <li class="feature-item">Business verification system</li>
+                    <li class="feature-item">Integration with BTCMap</li>
                 </ul>
             </div>
+
+             <!-- Version 0.2 - Initial Release -->
+             <div class="changelog-entry">
+                <div class="version-header">
+                    <div class="version-number">Version 0.2 - Map View Update</div>
+                    <div class="version-date">May 5, 2025</div>
+                </div>
+                
+                <div class="category-label">
+                    <span class="badge badge-new">New</span> Map Features
+                </div>
+                <ul class="changelog-list">
+                    <li class="feature-item">Added interactive Map View for geographic browsing of businesses</li>
+                    <li class="feature-item">Implemented business clustering for locations with multiple businesses</li>
+                    <li class="feature-item">Added detailed business information panel in Map View</li>
+                    <li class="feature-item">Created visual indicators for business locations and clusters</li>
+                    <li class="feature-item">Added ability to click markers to view business details</li>
+                    <li class="feature-item">Implemented automatic map bounds adjustment based on filtered businesses</li>
+                </ul>
+
+                <div class="category-label mt-4">
+                    <span class="badge badge-new">New</span> BTCMap Integration
+                </div>
+                <ul class="changelog-list">
+                    <li class="feature-item">Added BTCMap tab for future integration with BTCMap's global database</li>
+                    <li class="feature-item">Created placeholder for upcoming BTCMap features</li>
+                    <li class="feature-item">Added attribution and links to BTCMap project</li>
+                </ul>
+
+                <div class="category-label mt-4">
+                    <span class="badge badge-improved">Improved</span> Location Features
+                </div>
+                <ul class="changelog-list">
+                    <li class="feature-item">Enhanced location-based search with map integration</li>
+                    <li class="feature-item">Improved distance calculations and display</li>
+                    <li class="feature-item">Added support for approximate location indicators</li>
+                    <li class="feature-item">Enhanced handling of global/online businesses</li>
+                </ul>
+
+                <div class="category-label mt-4">
+                    <span class="badge badge-improved">Improved</span> User Interface
+                </div>
+                <ul class="changelog-list">
+                    <li class="feature-item">Added view mode toggle between Card, List, and Map views</li>
+                    <li class="feature-item">Implemented Directory/BTCMap mode switch</li>
+                    <li class="feature-item">Enhanced mobile responsiveness for map features</li>
+                    <li class="feature-item">Added visual indicators for businesses with location data</li>
+                    <li class="feature-item">Improved filter status display with distance information</li>
+                </ul>
+
+                <div class="category-label mt-4">
+                    <span class="badge badge-improved">Improved</span> Core Features
+                </div>
+                <ul class="changelog-list">
+                    <li class="feature-item">Added version control and cache management</li>
+                    <li class="feature-item">Enhanced location data structure and coordinate handling</li>
+                    <li class="feature-item">Improved business data organization and filtering</li>
+                    <li class="feature-item">Added support for business logos and images</li>
+                    <li class="feature-item">Separated HTML and JS for easier maintenance</li>
+                </ul>
+            </div>
+        </div>
 
             <!-- Version 0.1 - Initial Release -->
             <div class="changelog-entry">
@@ -218,18 +279,19 @@
                 </li>
             </ul>
 
+             <!-- Template for Future Attributions 
             <div class="category-label mt-4">
-                <span class="badge badge-new">Template for Future Attributions</span>
+               <span class="badge badge-new">Template for Future Attributions</span>
             </div>
             <ul class="changelog-list text-muted">
-                <li class="feature-item">
+               <li class="feature-item">
+                  <a href="[Project URL]" target="_blank" rel="noopener noreferrer">[Component Name]</a> - <a href="[License URL]" target="_blank" rel="noopener noreferrer">[License Type]</a>
+               </li>
+               <li class="feature-item">
                     <a href="[Project URL]" target="_blank" rel="noopener noreferrer">[Component Name]</a> - <a href="[License URL]" target="_blank" rel="noopener noreferrer">[License Type]</a>
-                </li>
-                <li class="feature-item">
-                    <a href="[Project URL]" target="_blank" rel="noopener noreferrer">[Component Name]</a> - <a href="[License URL]" target="_blank" rel="noopener noreferrer">[License Type]</a>
-                </li>
+               </li>
             </ul>
-        </div>
+        </div> -->
     </div>
 
     <footer class="mt-5 py-3 bg-light">
