added github reference

--- a/about.html
+++ b/about.html
@@ -63,6 +63,11 @@
 
     <div class="container">
         <div class="content-section">
+            <div class="github-section mb-4">
+                <h2>Open Source</h2>
+                <p>BTCAccepted is an open-source project. View our code, contribute, or report issues on <a href="https://github.com/aoeu10/BTCAccepted" target="_blank" class="text-decoration-none"><i class="bi bi-github"></i> GitHub</a>.</p>
+            </div>
+
             <h2>About Our Directory</h2>
             <p>BTCAccepted.org is a directory of bitcoin-accepting businesses that are either online only or do not have a physical location. OpenStreetMaps and inclusion on <a href="https://btcmap.org" target="_blank" class="text-decoration-none">BTCMap.org</a> require a physical address. It was created by Scott in early 2025 as a project to help promote bitcoin adoption in his local area. It has evolved into an open source community-driven global directory with a goal to catalog bitcoin-accepting businesses wordwide. Please see the <a href="contact_us.html" class="me-3 text-decoration-none">Contact Us</a> page for more information and to learn how you can help.</p>
 
