adding CSV export functionality

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 
                 <details class="mb-3">
                     <summary class="fw-bold">Do I have to be bitcoin-only to be included?</summary>
-                    <p class="mt-2">No, you don't have to be bitcoin-only to be included in our directory. We welcome businesses that accept Bitcoin alongside traditional payment methods, as well as those who are transitioning to accepting Bitcoin. Whether you accept Bitcoin through various payment processors or support both on-chain and Lightning Network payments, we encourage your participation. Our goal is to promote Bitcoin adoption and the Bitcoin circular economy. However, no other cryptocurrencies will be featured in our directory. You may still be included if you accept other cryptocurrencies, but your site may be relagated below other bitcoin-only businesses. </p>
+                    <p class="mt-2">No, you don't have to be bitcoin-only to be included in our directory. We welcome businesses that accept Bitcoin alongside traditional payment methods, as well as those who are transitioning to accepting Bitcoin. Whether you accept Bitcoin through various payment processors or support both on-chain and Lightning Network payments, we encourage your participation. Our goal is to promote Bitcoin adoption and the Bitcoin circular economy. If you are bitcoin-only, you will be featured in the bitcoin-only section of our directory. No other cryptocurrencies will be featured in our directory. You may still be included if you accept other cryptocurrencies, but your site may be relagated below other bitcoin-only businesses. </p>
                 </details>
 
                 <details class="mb-3">
