--- a/contact_us.html
+++ b/contact_us.html
@@ -598,8 +598,8 @@
                                     <div class="row">
                                         <div class="col-lg-3 col-md-4 col-sm-6 mb-1">
                                             <div class="form-check">
-                                                <input class="form-check-input subcategory" type="checkbox" id="subcat-apiculture" value="Apiculture" data-parent="Food & Drink">
-                                                <label class="form-check-label" for="subcat-apiculture">Apiculture</label>
+                                                <input class="form-check-input subcategory" type="checkbox" id="subcat-apiculture" value="Apiculture/Honey" data-parent="Food & Drink">
+                                                <label class="form-check-label" for="subcat-apiculture">Apiculture/Honey</label>
                                             </div>
                                         </div>
                                         <div class="col-lg-3 col-md-4 col-sm-6 mb-1">
@@ -1023,6 +1023,17 @@
                 </div>
 
                 <div class="mb-3">
+                    <div class="border-bottom pb-3 mb-3">
+                        <label class="form-label">Business Type</label>
+                        <div>
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="bitcoinOnly" name="bitcoinOnly">
+                                <label class="form-check-label" for="bitcoinOnly">Bitcoin Only Business</label>
+                            </div>
+                            <div class="form-text text-muted">Check this if the business exclusively accepts Bitcoin and no other payment methods</div>
+                        </div>
+                    </div>
+                    
                     <label class="form-label">Bitcoin Payment Methods Accepted *</label>
                     <div class="form-check">
                         <input class="form-check-input payment-method-check" type="checkbox" id="onchain" name="onchain">
@@ -1396,6 +1407,7 @@ document.addEventListener('DOMContentLoaded', function() {
             description: description || "",
             socialMedia: {},
             paymentMethods: {
+                bitcoinOnly: document.getElementById('bitcoinOnly').checked,
                 onchain: onchain,
                 lightning: lightning,
                 ecash: document.getElementById('ecash').checked,
